--- a/server/package.json
+++ b/server/package.json
@@ -1,1 +1,36 @@
-
+{
+  "name": "chatcontabil-api",
+  "version": "1.0.0",
+  "description": "API Gateway, agendamento de tarefas e orquestrador de serviços para o Chat Contábil",
+  "main": "index.js",
+  "author": "Christian Sousa",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "docs": "swagger-jsdoc -d swaggerDef.js -o swagger.json"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "googleapis": "^171.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
+    "node-firebird": "^1.1.9",
+    "nodemailer": "^8.0.1",
+    "pdfkit": "^0.17.2",
+    "pg": "^8.17.2",
+    "sharp": "^0.33.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "undici": "^7.16.0",
+    "xlsx": "^0.18.5"
+  }
+}
